// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return no expression 1`] = `
Program {
  "children": Array [
    Return {
      "expr": null,
      "kind": "return",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`return should fail when no ';' at end 1`] = `
Program {
  "children": Array [
    Return {
      "expr": undefined,
      "kind": "return",
    },
  ],
  "errors": Array [
    Error {
      "expected": "EXPR",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error on line 1",
      "token": "the end of file (EOF)",
    },
  ],
  "kind": "program",
}
`;

exports[`return simple 1`] = `
Program {
  "children": Array [
    Return {
      "expr": String {
        "isDoubleQuote": true,
        "kind": "string",
        "raw": "\\"string\\"",
        "unicode": false,
        "value": "string",
      },
      "kind": "return",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
